--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -7,7 +7,7 @@ block header
             #navbarNavAltMarkup.collapse.navbar-collapse
                 .navbar-nav
                     a.nav-link(href='#') Productos
-                    a.nav-link(href='#') Categorias
+                    a.nav-link(href='/categories') Categorias
                     a.nav-link(href='#') Compras
                     a.nav-link(href='#') Favoritos
                    
