[upd] funcionamiento de categorias, parcialidad de productos

--- a/src/views/layout/header.pug
+++ b/src/views/layout/header.pug
@@ -6,7 +6,7 @@ block header
                 span.navbar-toggler-icon
             #navbarNavAltMarkup.collapse.navbar-collapse
                 .navbar-nav
-                    a.nav-link(href='#') Productos
+                    a.nav-link(href='/products') Productos
                     a.nav-link(href='/categories') Categorias
                     a.nav-link(href='#') Compras
                     a.nav-link(href='#') Favoritos
