--- a/src/views/layout/index.pug
+++ b/src/views/layout/index.pug
@@ -8,7 +8,7 @@ html(lang="es")
         title=Dashbord
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
-    body
+    body.background-store
         block header
         block contenido
         script(src="/js/bootstrap.bundle.min.js") 
