--- a/src/views/products.pug
+++ b/src/views/products.pug
@@ -5,7 +5,7 @@ block contenido
 
         .container.mt-4
             
-            form.p-4.border.rounded(action="/products/create", method="post")
+            form.p-4.shadow.rounded.bg-white(action="/products/create", method="post")
                 h3.text-center Crear Producto
 
                 label.form-label(for="name") Nombre del producto
@@ -31,18 +31,25 @@ block contenido
             //- Tabla de las categoria
             .mt-4.mb-4
                 if data
-                    h3.text-center Listado de productos
-                    table.table
-                        tr
-                            th Nombre
-                            th Acciones
-                        each item in data
-                            tr(data-categorie=item.id)
-                                td=item.name
-                                td.d-flex.justify-content-end.gap-2
-                                    button.btn.btn-primary.d-none(id="save") Guardar 
-                                    button.btn.btn-outline-primary(id="edit") Editar 
-                                    button.btn.btn-warning(id="delete") Eliminar 
+                    .container.shadow.rounded.bg-white.py-4
+                        h3.text-center Listado de productos
+                        table.table
+                            tr
+                                th Nombre
+                                th Precio
+                                th Categoria
+                                th Stock
+                                th Acciones
+                            each item in data
+                                tr(data-categorie=item.id)
+                                    td=item.name
+                                    td=item.price
+                                    td=item.category_id
+                                    td=item.stock
+                                    td.d-flex.justify-content-end.gap-2
+                                        button.btn.btn-primary.d-none(id="save") Guardar 
+                                        button.btn.btn-outline-primary(id="edit") Editar 
+                                        button.btn.btn-warning(id="delete") Eliminar 
                 else
                     .mt-4.alert.alert-warning No hay productos registrados
 
